kubernetes/svc-NodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service-np
spec:
  selector:
    app: app-home-work-a-api
    developer: pechydev
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30001
